--- a/ide/findrenameidentifier.lfm
+++ b/ide/findrenameidentifier.lfm
@@ -1,64 +1,62 @@
 object FindRenameIdentifierDialog: TFindRenameIdentifierDialog
+  Left = 291
+  Height = 468
+  Top = 163
+  Width = 452
+  HorzScrollBar.Page = 451
+  VertScrollBar.Page = 467
   ActiveControl = CurrentListBox
   BorderStyle = bsSizeToolWin
   Caption = 'FindRenameIdentifierDialog'
-  ClientHeight = 439
-  ClientWidth = 452
   OnClose = FindRenameIdentifierDialogClose
   OnCreate = FindRenameIdentifierDialogCreate
-  PixelsPerInch = 96
   Position = poScreenCenter
-  HorzScrollBar.Page = 451
-  VertScrollBar.Page = 438
-  Left = 291
-  Height = 439
-  Top = 163
-  Width = 452
   object CurrentGroupBox: TGroupBox
+    Left = 6
+    Height = 79
+    Top = 6
+    Width = 440
     Align = alTop
     Anchors = [akTop, akLeft, akRight, akBottom]
     BorderSpacing.Around = 6
     Caption = 'CurrentGroupBox'
-    ClientHeight = 60
-    ClientWidth = 436
     TabOrder = 0
-    Left = 6
-    Height = 78
-    Top = 6
-    Width = 440
     object CurrentListBox: TListBox
+      Left = 6
+      Height = 50
+      Top = 6
+      Width = 424
       Align = alClient
       BorderSpacing.Around = 6
       ClickOnSelChange = False
       TabOrder = 0
-      Left = 6
-      Height = 48
-      Top = 6
-      Width = 424
+      TopIndex = -1
     end
   end
   object NewGroupBox: TGroupBox
+    Left = 6
+    Height = 85
+    Top = 91
+    Width = 440
     Align = alTop
     BorderSpacing.Around = 6
     Caption = 'NewGroupBox'
-    ClientHeight = 58
-    ClientWidth = 436
     TabOrder = 1
-    Left = 6
-    Height = 76
-    Top = 90
-    Width = 440
     object NewEdit: TEdit
-      Align = alTop
-      BorderSpacing.Around = 6
-      TabOrder = 0
-      Text = 'NewEdit'
       Left = 6
       Height = 23
       Top = 6
       Width = 424
+      Align = alTop
+      BorderSpacing.Around = 6
+      TabOrder = 0
+      Text = 'NewEdit'
     end
     object RenameCheckBox: TCheckBox
+      Left = 6
+      Height = 20
+      Top = 35
+      Width = 424
       Align = alTop
       AllowGrayed = True
       Anchors = [akTop, akRight]
@@ -67,38 +65,45 @@ object FindRenameIdentifierDialog: TFindRenameIdentifierDialog
       OnChange = RenameCheckBoxChange
       TabOrder = 1
       UseOnChange = True
-      Left = 6
-      Height = 13
-      Top = 35
-      Width = 424
     end
   end
   object ScopeGroupBox: TGroupBox
+    Left = 6
+    Height = 244
+    Top = 182
+    Width = 440
     Align = alTop
     BorderSpacing.Around = 6
     Caption = 'ScopeGroupBox'
-    ClientHeight = 206
-    ClientWidth = 436
     TabOrder = 2
-    Left = 6
-    Height = 224
-    Top = 172
-    Width = 440
     object ScopeCommentsCheckBox: TCheckBox
+      Left = 6
+      Height = 20
+      Top = 185
+      Width = 424
       Align = alTop
       AllowGrayed = True
       BorderSpacing.Around = 6
       Caption = 'ScopeCommentsCheckBox'
       TabOrder = 0
-      Left = 6
-      Height = 13
-      Top = 184
-      Width = 424
     end
     object ScopeRadioGroup: TRadioGroup
+      Left = 6
+      Height = 112
+      Top = 6
+      Width = 424
       Align = alTop
+      AutoFill = True
       BorderSpacing.Around = 6
       Caption = 'ScopeRadioGroup'
+      ChildSizing.LeftRightSpacing = 6
+      ChildSizing.TopBottomSpacing = 6
+      ChildSizing.EnlargeHorizontal = crsHomogenousChildResize
+      ChildSizing.EnlargeVertical = crsHomogenousChildResize
+      ChildSizing.ShrinkHorizontal = crsScaleChilds
+      ChildSizing.ShrinkVertical = crsScaleChilds
+      ChildSizing.Layout = cclLeftToRightThenTopToBottom
+      ChildSizing.ControlsPerLine = 1
       Items.Strings = (
         'in current unit'
         'in main project'
@@ -106,58 +111,52 @@ object FindRenameIdentifierDialog: TFindRenameIdentifierDialog
         'in all open projects and packages'
       )
       TabOrder = 1
-      Left = 6
-      Height = 112
-      Top = 6
-      Width = 424
     end
     object ExtraFilesGroupBox: TGroupBox
+      Left = 6
+      Height = 55
+      Top = 124
+      Width = 424
       Align = alTop
       BorderSpacing.Around = 6
       Caption = 'ExtraFilesGroupBox'
-      ClientHeight = 36
-      ClientWidth = 420
       TabOrder = 2
-      Left = 6
-      Height = 54
-      Top = 124
-      Width = 424
       object ExtraFilesEdit: TEdit
-        Align = alTop
-        BorderSpacing.Around = 6
-        TabOrder = 0
-        Text = 'ExtraFilesEdit'
         Left = 6
         Height = 23
         Top = 6
         Width = 408
+        Align = alTop
+        BorderSpacing.Around = 6
+        TabOrder = 0
+        Text = 'ExtraFilesEdit'
       end
     end
   end
   object FindOrRenameButton: TButton
+    AnchorSideRight.Control = CancelButton
+    Left = 216
+    Height = 26
+    Top = 436
+    Width = 133
     Anchors = [akRight, akBottom]
     AutoSize = True
     BorderSpacing.Right = 8
-    
+    BorderSpacing.InnerBorder = 4
     Caption = 'FindOrRenameButton'
     OnClick = FindOrRenameButtonClick
     TabOrder = 3
-    AnchorSideRight.Control = CancelButton
-    Left = 224
-    Height = 29
-    Top = 404
-    Width = 126
   end
   object CancelButton: TButton
+    Left = 357
+    Height = 26
+    Top = 436
+    Width = 89
     Anchors = [akRight, akBottom]
     AutoSize = True
-    
+    BorderSpacing.InnerBorder = 4
     Caption = 'CancelButton'
     ModalResult = 2
     TabOrder = 4
-    Left = 358
-    Height = 29
-    Top = 404
-    Width = 88
   end
 end
