--- a/ide/findreplacedialog.lfm
+++ b/ide/findreplacedialog.lfm
@@ -1,18 +1,27 @@
 object LazFindReplaceDialog: TLazFindReplaceDialog
-  Left = 334
-  Height = 350
-  Top = 185
-  Width = 420
-  HorzScrollBar.Page = 419
-  VertScrollBar.Page = 349
   ActiveControl = TextToFindComboBox
   BorderIcons = [biSystemMenu]
   Caption = 'LazFindReplaceDialog'
+  ClientHeight = 350
+  ClientWidth = 420
   Constraints.MinHeight = 312
   KeyPreview = True
   OnClose = FormClose
   OnChangeBounds = FormChangeBounds
+  PixelsPerInch = 75
+  HorzScrollBar.Page = 419
+  VertScrollBar.Page = 349
+  Left = 334
+  Height = 350
+  Top = 185
+  Width = 420
   object TextToFindLabel: TLabel
+    Alignment = taRightJustify
+    BorderSpacing.Left = 6
+    Caption = 'TextToFindLabel'
+    Color = clNone
+    FocusControl = TextToFindComboBox
+    ParentColor = False
     AnchorSideLeft.Control = Owner
     AnchorSideTop.Control = TextToFindComboBox
     AnchorSideTop.Side = asrCenter
@@ -20,14 +29,14 @@ object LazFindReplaceDialog: TLazFindReplaceDialog
     Height = 13
     Top = 16
     Width = 94
-    Alignment = taRightJustify
-    BorderSpacing.Left = 6
-    Caption = 'TextToFindLabel'
-    Color = clNone
-    FocusControl = TextToFindComboBox
-    ParentColor = False
   end
   object ReplaceWithLabel: TLabel
+    Alignment = taRightJustify
+    BorderSpacing.Left = 6
+    Caption = 'ReplaceWithLabel'
+    Color = clNone
+    FocusControl = ReplaceTextComboBox
+    ParentColor = False
     AnchorSideLeft.Control = Owner
     AnchorSideTop.Control = ReplaceTextComboBox
     AnchorSideTop.Side = asrCenter
@@ -35,22 +44,8 @@ object LazFindReplaceDialog: TLazFindReplaceDialog
     Height = 13
     Top = 43
     Width = 102
-    Alignment = taRightJustify
-    BorderSpacing.Left = 6
-    Caption = 'ReplaceWithLabel'
-    Color = clNone
-    FocusControl = ReplaceTextComboBox
-    ParentColor = False
   end
   object TextToFindComboBox: TComboBox
-    AnchorSideLeft.Control = TextToFindLabel
-    AnchorSideLeft.Side = asrBottom
-    AnchorSideRight.Control = Owner
-    AnchorSideRight.Side = asrBottom
-    Left = 112
-    Height = 21
-    Top = 12
-    Width = 302
     Anchors = [akTop, akLeft, akRight]
     AutoComplete = True
     AutoCompleteText = [cbactEnabled, cbactEndOfLineComplete, cbactRetainPrefixCase, cbactSearchAscending]
@@ -60,16 +55,16 @@ object LazFindReplaceDialog: TLazFindReplaceDialog
     OnKeyDown = TextToFindComboboxKeyDown
     TabOrder = 0
     Text = 'TextToFindComboBox'
-  end
-  object ReplaceTextComboBox: TComboBox
-    AnchorSideLeft.Control = ReplaceWithLabel
+    AnchorSideLeft.Control = TextToFindLabel
     AnchorSideLeft.Side = asrBottom
     AnchorSideRight.Control = Owner
     AnchorSideRight.Side = asrBottom
-    Left = 120
+    Left = 112
     Height = 21
-    Top = 39
-    Width = 294
+    Top = 12
+    Width = 302
+  end
+  object ReplaceTextComboBox: TComboBox
     Anchors = [akTop, akLeft, akRight]
     AutoComplete = True
     AutoCompleteText = [cbactEnabled, cbactEndOfLineComplete, cbactRetainPrefixCase, cbactSearchAscending]
@@ -79,15 +74,16 @@ object LazFindReplaceDialog: TLazFindReplaceDialog
     OnKeyDown = TextToFindComboboxKeyDown
     TabOrder = 1
     Text = 'ReplaceTextComboBox'
+    AnchorSideLeft.Control = ReplaceWithLabel
+    AnchorSideLeft.Side = asrBottom
+    AnchorSideRight.Control = Owner
+    AnchorSideRight.Side = asrBottom
+    Left = 120
+    Height = 21
+    Top = 39
+    Width = 294
   end
   object CancelButton: TBitBtn
-    AnchorSideRight.Control = ReplaceAllButton
-    AnchorSideBottom.Control = Owner
-    AnchorSideBottom.Side = asrBottom
-    Left = 230
-    Height = 24
-    Top = 320
-    Width = 73
     Anchors = [akRight, akBottom]
     AutoSize = True
     BorderSpacing.Around = 6
@@ -100,16 +96,15 @@ object LazFindReplaceDialog: TLazFindReplaceDialog
     NumGlyphs = 0
     OnClick = CancelButtonClick
     TabOrder = 2
-  end
-  object OKButton: TBitBtn
-    AnchorSideRight.Control = Owner
-    AnchorSideRight.Side = asrBottom
+    AnchorSideRight.Control = ReplaceAllButton
     AnchorSideBottom.Control = Owner
     AnchorSideBottom.Side = asrBottom
-    Left = 363
+    Left = 230
     Height = 24
     Top = 320
-    Width = 51
+    Width = 73
+  end
+  object OKButton: TBitBtn
     Anchors = [akRight, akBottom]
     AutoSize = True
     BorderSpacing.Around = 6
@@ -121,8 +116,25 @@ object LazFindReplaceDialog: TLazFindReplaceDialog
     NumGlyphs = 0
     OnClick = OkButtonClick
     TabOrder = 3
+    AnchorSideRight.Control = Owner
+    AnchorSideRight.Side = asrBottom
+    AnchorSideBottom.Control = Owner
+    AnchorSideBottom.Side = asrBottom
+    Left = 363
+    Height = 24
+    Top = 320
+    Width = 51
   end
   object OptionsGroupBox: TGroupBox
+    Anchors = [akTop, akLeft, akBottom]
+    BorderSpacing.Left = 6
+    BorderSpacing.Top = 6
+    BorderSpacing.Bottom = 6
+    Caption = 'OptionsGroupBox'
+    ClientHeight = 231
+    ClientWidth = 195
+    TabOrder = 4
+    OnResize = OptionsGroupBoxResize
     AnchorSideLeft.Control = Owner
     AnchorSideTop.Control = ReplaceTextComboBox
     AnchorSideTop.Side = asrBottom
@@ -131,19 +143,7 @@ object LazFindReplaceDialog: TLazFindReplaceDialog
     Height = 248
     Top = 66
     Width = 199
-    Anchors = [akTop, akLeft, akBottom]
-    BorderSpacing.Left = 6
-    BorderSpacing.Top = 6
-    BorderSpacing.Bottom = 6
-    Caption = 'OptionsGroupBox'
-    TabOrder = 4
-    OnResize = OptionsGroupBoxResize
     object PromptOnReplaceCheckBox: TCheckBox
-      AnchorSideTop.Side = asrBottom
-      Left = 6
-      Height = 20
-      Top = 140
-      Width = 183
       Align = alTop
       BorderSpacing.Top = 6
       BorderSpacing.Around = 6
@@ -153,28 +153,27 @@ object LazFindReplaceDialog: TLazFindReplaceDialog
       ShowHint = True
       State = cbChecked
       TabOrder = 0
+      AnchorSideTop.Side = asrBottom
+      Left = 6
+      Height = 20
+      Top = 140
+      Width = 183
     end
     object MultiLineCheckBox: TCheckBox
+      Align = alTop
+      BorderSpacing.Top = 6
+      BorderSpacing.Around = 6
+      Caption = 'MultiLineCheckBox'
+      ParentShowHint = False
+      ShowHint = True
+      TabOrder = 1
       AnchorSideTop.Side = asrBottom
       Left = 6
       Height = 20
       Top = 108
       Width = 183
-      Align = alTop
-      BorderSpacing.Top = 6
-      BorderSpacing.Around = 6
-      Caption = 'MultiLineCheckBox'
-      Enabled = False
-      ParentShowHint = False
-      ShowHint = True
-      TabOrder = 1
     end
     object RegularExpressionsCheckBox: TCheckBox
-      AnchorSideTop.Side = asrBottom
-      Left = 6
-      Height = 20
-      Top = 76
-      Width = 183
       Align = alTop
       BorderSpacing.Top = 6
       BorderSpacing.Around = 6
@@ -182,13 +181,13 @@ object LazFindReplaceDialog: TLazFindReplaceDialog
       ParentShowHint = False
       ShowHint = True
       TabOrder = 2
-    end
-    object WholeWordsOnlyCheckBox: TCheckBox
       AnchorSideTop.Side = asrBottom
       Left = 6
       Height = 20
-      Top = 44
+      Top = 76
       Width = 183
+    end
+    object WholeWordsOnlyCheckBox: TCheckBox
       Align = alTop
       BorderSpacing.Top = 6
       BorderSpacing.Around = 6
@@ -196,13 +195,13 @@ object LazFindReplaceDialog: TLazFindReplaceDialog
       ParentShowHint = False
       ShowHint = True
       TabOrder = 3
-    end
-    object CaseSensitiveCheckBox: TCheckBox
       AnchorSideTop.Side = asrBottom
       Left = 6
       Height = 20
-      Top = 12
+      Top = 44
       Width = 183
+    end
+    object CaseSensitiveCheckBox: TCheckBox
       Align = alTop
       BorderSpacing.Top = 6
       BorderSpacing.Around = 6
@@ -210,17 +209,14 @@ object LazFindReplaceDialog: TLazFindReplaceDialog
       ParentShowHint = False
       ShowHint = True
       TabOrder = 4
+      AnchorSideTop.Side = asrBottom
+      Left = 6
+      Height = 20
+      Top = 12
+      Width = 183
     end
   end
   object ScopeGroupBox: TGroupBox
-    AnchorSideLeft.Control = OptionsGroupBox
-    AnchorSideLeft.Side = asrBottom
-    AnchorSideTop.Control = OriginGroupBox
-    AnchorSideTop.Side = asrBottom
-    Left = 211
-    Height = 74
-    Top = 146
-    Width = 199
     BorderSpacing.Around = 6
     Caption = 'ScopeGroupBox'
     ChildSizing.LeftRightSpacing = 6
@@ -230,35 +226,37 @@ object LazFindReplaceDialog: TLazFindReplaceDialog
     ChildSizing.ShrinkVertical = crsHomogenousSpaceResize
     ChildSizing.Layout = cclLeftToRightThenTopToBottom
     ChildSizing.ControlsPerLine = 1
+    ClientHeight = 57
+    ClientWidth = 195
     TabOrder = 5
+    AnchorSideLeft.Control = OptionsGroupBox
+    AnchorSideLeft.Side = asrBottom
+    AnchorSideTop.Control = OriginGroupBox
+    AnchorSideTop.Side = asrBottom
+    Left = 211
+    Height = 74
+    Top = 146
+    Width = 199
     object SelectedRadioButton: TRadioButton
+      Caption = 'SelectedRadioButton'
+      TabOrder = 0
       Left = 6
       Height = 20
       Top = 6
       Width = 183
-      Caption = 'SelectedRadioButton'
-      TabOrder = 0
     end
     object GlobalRadioButton: TRadioButton
-      Left = 6
-      Height = 20
-      Top = 32
-      Width = 183
       Caption = 'GlobalRadioButton'
       Checked = True
       State = cbChecked
       TabOrder = 1
+      Left = 6
+      Height = 20
+      Top = 32
+      Width = 183
     end
   end
   object DirectionGroupBox: TGroupBox
-    AnchorSideLeft.Control = OptionsGroupBox
-    AnchorSideLeft.Side = asrBottom
-    AnchorSideTop.Control = ScopeGroupBox
-    AnchorSideTop.Side = asrBottom
-    Left = 211
-    Height = 74
-    Top = 226
-    Width = 199
     BorderSpacing.Around = 6
     Caption = 'DirectionGroupBox'
     ChildSizing.LeftRightSpacing = 6
@@ -268,35 +266,37 @@ object LazFindReplaceDialog: TLazFindReplaceDialog
     ChildSizing.ShrinkVertical = crsHomogenousSpaceResize
     ChildSizing.Layout = cclLeftToRightThenTopToBottom
     ChildSizing.ControlsPerLine = 1
+    ClientHeight = 57
+    ClientWidth = 195
     TabOrder = 6
+    AnchorSideLeft.Control = OptionsGroupBox
+    AnchorSideLeft.Side = asrBottom
+    AnchorSideTop.Control = ScopeGroupBox
+    AnchorSideTop.Side = asrBottom
+    Left = 211
+    Height = 74
+    Top = 226
+    Width = 199
     object BackwardRadioButton: TRadioButton
+      Caption = 'BackwardRadioButton'
+      TabOrder = 0
       Left = 6
       Height = 20
       Top = 6
       Width = 183
-      Caption = 'BackwardRadioButton'
-      TabOrder = 0
     end
     object ForwardRadioButton: TRadioButton
-      Left = 6
-      Height = 20
-      Top = 32
-      Width = 183
       Caption = 'ForwardRadioButton'
       Checked = True
       State = cbChecked
       TabOrder = 1
+      Left = 6
+      Height = 20
+      Top = 32
+      Width = 183
     end
   end
   object OriginGroupBox: TGroupBox
-    AnchorSideLeft.Control = OptionsGroupBox
-    AnchorSideLeft.Side = asrBottom
-    AnchorSideTop.Control = ReplaceTextComboBox
-    AnchorSideTop.Side = asrBottom
-    Left = 211
-    Height = 74
-    Top = 66
-    Width = 199
     BorderSpacing.Around = 6
     Caption = 'OriginGroupBox'
     ChildSizing.LeftRightSpacing = 6
@@ -306,36 +306,39 @@ object LazFindReplaceDialog: TLazFindReplaceDialog
     ChildSizing.ShrinkVertical = crsHomogenousSpaceResize
     ChildSizing.Layout = cclLeftToRightThenTopToBottom
     ChildSizing.ControlsPerLine = 1
+    ClientHeight = 57
+    ClientWidth = 195
     TabOrder = 7
+    AnchorSideLeft.Control = OptionsGroupBox
+    AnchorSideLeft.Side = asrBottom
+    AnchorSideTop.Control = ReplaceTextComboBox
+    AnchorSideTop.Side = asrBottom
+    Left = 211
+    Height = 74
+    Top = 66
+    Width = 199
     object FromCursorRadioButton: TRadioButton
-      Left = 6
-      Height = 20
-      Top = 6
-      Width = 183
       AutoSize = False
       Caption = 'FromCursorRadioButton'
       Checked = True
       State = cbChecked
       TabOrder = 0
+      Left = 6
+      Height = 20
+      Top = 6
+      Width = 183
     end
     object EntireScopeRadioButton: TRadioButton
+      AutoSize = False
+      Caption = 'EntireScopeRadioButton'
+      TabOrder = 1
       Left = 6
       Height = 20
       Top = 32
       Width = 183
-      AutoSize = False
-      Caption = 'EntireScopeRadioButton'
-      TabOrder = 1
     end
   end
   object ReplaceAllButton: TBitBtn
-    AnchorSideRight.Control = OKButton
-    AnchorSideBottom.Control = Owner
-    AnchorSideBottom.Side = asrBottom
-    Left = 309
-    Height = 24
-    Top = 320
-    Width = 48
     Anchors = [akRight, akBottom]
     AutoSize = True
     BorderSpacing.Around = 6
@@ -346,5 +349,12 @@ object LazFindReplaceDialog: TLazFindReplaceDialog
     NumGlyphs = 0
     OnClick = ReplaceAllButtonClick
     TabOrder = 8
+    AnchorSideRight.Control = OKButton
+    AnchorSideBottom.Control = Owner
+    AnchorSideBottom.Side = asrBottom
+    Left = 309
+    Height = 24
+    Top = 320
+    Width = 48
   end
 end
