--- a/examples/fontenum/mainunit.lfm
+++ b/examples/fontenum/mainunit.lfm
@@ -13,52 +13,52 @@ object frmMain: TfrmMain
   OnCreate = FormCreate
   OnShow = FormShow
   ShowHint = True
-  LCLVersion = '1.1'
+  LCLVersion = '1.8.0.1'
   object Label3: TLabel
     Left = 548
-    Height = 13
+    Height = 15
     Top = 257
-    Width = 24
+    Width = 27
     Caption = 'Filtro'
     ParentColor = False
   end
   object Label4: TLabel
     Left = 216
-    Height = 13
+    Height = 15
     Top = 16
-    Width = 62
+    Width = 67
     Caption = 'Face font list'
     ParentColor = False
   end
   object Label5: TLabel
     Left = 424
-    Height = 13
+    Height = 15
     Top = 11
-    Width = 29
+    Width = 30
     Caption = 'Styles'
     ParentColor = False
   end
   object Sizes: TLabel
     Left = 648
-    Height = 13
+    Height = 15
     Top = 11
-    Width = 24
+    Width = 25
     Caption = 'Sizes'
     ParentColor = False
   end
   object lblCharset: TLabel
     Left = 424
-    Height = 13
+    Height = 15
     Top = 176
-    Width = 48
+    Width = 53
     Caption = 'lblCharset'
     ParentColor = False
   end
   object Label6: TLabel
     Left = 11
-    Height = 13
+    Height = 15
     Top = 16
-    Width = 24
+    Width = 26
     Caption = 'Filter'
     ParentColor = False
   end
@@ -69,14 +69,15 @@ object frmMain: TfrmMain
     Width = 200
     ItemHeight = 0
     OnClick = lbFamilyClick
+    Options = [lboDrawFocusRect]
     TabOrder = 0
   end
   object cbCharset: TComboBox
     Left = 8
-    Height = 21
+    Height = 23
     Top = 37
     Width = 194
-    ItemHeight = 13
+    ItemHeight = 15
     TabOrder = 1
     Text = 'ANSI_CHARSET'
   end
@@ -97,6 +98,7 @@ object frmMain: TfrmMain
     Width = 208
     ItemHeight = 0
     OnClick = lbStylesClick
+    Options = [lboDrawFocusRect]
     TabOrder = 3
   end
   object lbSizes: TListBox
@@ -106,6 +108,7 @@ object frmMain: TfrmMain
     Width = 56
     ItemHeight = 0
     OnClick = lbSizesClick
+    Options = [lboDrawFocusRect]
     TabOrder = 4
   end
   object lbCharset: TListBox
@@ -115,14 +118,15 @@ object frmMain: TfrmMain
     Width = 208
     ItemHeight = 0
     OnClick = lbCharsetClick
+    Options = [lboDrawFocusRect]
     TabOrder = 5
   end
   object cbPitch: TComboBox
     Left = 8
-    Height = 21
+    Height = 23
     Top = 61
     Width = 194
-    ItemHeight = 13
+    ItemHeight = 15
     ItemIndex = 0
     Items.Strings = (
       'DEFAULT_PITCH'
@@ -144,19 +148,21 @@ object frmMain: TfrmMain
     TabOrder = 7
   end
   object chkStrike: TCheckBox
-    Left = 591
-    Height = 17
+    Left = 592
+    Height = 19
     Top = 312
-    Width = 61
+    Width = 67
     Caption = 'Strikeout'
+    OnChange = chkStrikeChange
     TabOrder = 8
   end
   object chkUnderLine: TCheckBox
     Left = 592
-    Height = 17
+    Height = 19
     Top = 336
-    Width = 66
+    Width = 74
     Caption = 'UnderLine'
+    OnChange = chkUnderLineChange
     TabOrder = 9
   end
   object Button1: TButton
