TAChart/ChartEditor demo: Check that axis maximum is always greater than the minimum.
 SVN 65391@trunk

--- a/components/tachart/demo/charteditor/ceaxisframe.lfm
+++ b/components/tachart/demo/charteditor/ceaxisframe.lfm
@@ -44,6 +44,7 @@ object ChartAxisFrame: TChartAxisFrame
     Align = alClient
     TabIndex = 1
     TabOrder = 1
+    OnChanging = PageControlChanging
     object pgTitle: TTabSheet
       Caption = 'Title'
       ClientHeight = 418
